--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
       "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.20",
-      "reflect-metadata": "^0.1.10"
+      "oracledb": "^4.0.1",
+      "pg": "^7.12.1",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.20"
    },
    "scripts": {
       "start": "ts-node src/index.ts"
