--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,13 @@
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
-   }
+      "sourceMap": true,
+      "baseUrl": "./src",
+      "paths": {
+        "src/*": ["*"]
+      }
+   },
+   "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
