--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "ajv": "^8.10.0",
       "chokidar": "^3.5.3",
       "minimatch": "^5.0.1",
       "oracledb": "^4.0.1",
