--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/koa": "^2.13.4",
       "@types/minimatch": "^3.0.5",
       "@types/node": "^17.0.21",
       "@types/pg": "^8.6.4",
@@ -12,6 +13,8 @@
    "dependencies": {
       "ajv": "^8.10.0",
       "chokidar": "^3.5.3",
+      "koa": "^2.13.4",
+      "koa-body": "^4.2.0",
       "minimatch": "^5.0.1",
       "oracledb": "^4.0.1",
       "pg": "^8.7.3",
@@ -20,7 +23,7 @@
       "typeorm": "^0.2.45"
    },
    "scripts": {
-      "start": "ts-node src/server.ts",
+      "start": "ts-node src/serverKoa.ts",
       "4A": "ts-node domains/4A/index.ts"
    }
 }
