测试 elastic 集成，可连通，bulk insert 还存在报错

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@types/elasticsearch": "^5.0.40",
       "ajv": "^8.10.0",
       "chokidar": "^3.5.3",
+      "elasticsearch": "^16.7.3",
       "koa": "^2.13.4",
       "koa-body": "^4.2.0",
       "minimatch": "^5.0.1",
