--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
       "typeorm": "^0.2.45"
    },
    "scripts": {
-      "start": "ts-node src/serverKoa.ts",
+      "start": "ts-node engine/serverKoa.ts",
       "4A": "ts-node domains/4A/index.ts"
    },
    "optionalDependencies": {
