--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "@types/minimatch": "^3.0.5",
       "@types/node": "^17.0.21",
       "@types/pg": "^8.6.4",
+      "lerna": "^4.0.0",
       "ts-node": "^10.6.0",
       "typescript": "3.3.3333"
    },
