--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "ajv": "^8.10.0",
     "chokidar": "^3.5.3",
+    "debug": "^4.3.3",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
     "minimatch": "^5.0.1",
@@ -17,10 +18,10 @@
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
-    "node-fetch": "^3.2.2",
     "@types/koa": "^2.13.4",
     "@types/minimatch": "^3.0.5",
     "@types/node": "^17.0.21",
+    "node-fetch": "^3.2.2",
     "ts-node": "^10.6.0",
     "typescript": "3.3.3333"
   },
