--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -18,6 +18,7 @@
     "typeorm": "^0.2.45"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "@types/koa": "^2.13.4",
     "@types/minimatch": "^3.0.5",
     "@types/node": "^17.0.21",
