支持 json5,yaml,xml,markdown 静态配置服务

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "Awesome project developed with TypeORM.",
   "workspaces": [
     "packages/engine",
-    "packages/examples"
+    "packages/examples",
+    "packages/loader-cfg-json5",
+    "packages/loader-cfg-yaml",
+    "packages/loader-cfg-xml",
+    "packages/loader-cfg-markdown"
   ],
   "devDependencies": {
     "lerna": "^4.0.0",
