--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -14,6 +14,7 @@
     "koa-body": "^4.2.0",
     "minimatch": "^5.0.1",
     "reflect-metadata": "^0.1.10",
+    "shimmer": "^1.2.1",
     "tsconfig-paths": "^3.13.0",
     "typeorm": "^0.2.45"
   },
@@ -22,6 +23,7 @@
     "@types/koa": "^2.13.4",
     "@types/minimatch": "^3.0.5",
     "@types/node": "^17.0.21",
+    "@types/shimmer": "^1.0.2",
     "node-fetch": "^3.2.2",
     "ts-node": "^10.6.0",
     "typescript": "3.3.3333"
