typeorm 集成从 core 转到应用 baas 层
核心自动提交回滚解耦具体的方式，不管 typeorm/pg 是哪个，使用标准规格

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -15,8 +15,7 @@
     "minimatch": "^5.0.1",
     "reflect-metadata": "^0.1.10",
     "shimmer": "^1.2.1",
-    "tsconfig-paths": "^3.13.0",
-    "typeorm": "^0.2.45"
+    "tsconfig-paths": "^3.13.0"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
