--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ncf",
   "version": "0.0.1",
   "private": true,
-  "description": "Awesome project developed with TypeORM.",
+  "description": "nodejs concise framework",
   "workspaces": [
     "packages/engine",
+    "packages/mw-validator",
     "packages/examples",
     "packages/loader-cfg-json5",
     "packages/loader-cfg-yaml",
