--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
-    "@ncf/engine": "*",
+    "@ncf/microkernel": "*",
     "elasticsearch": "^16.7.3",
     "pg": "^8.7.3",
     "typeorm": "^0.2.45"
