--- a/packages/microkernel/package.json
+++ b/packages/microkernel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ncf/engine",
+  "name": "@ncf/microkernel",
   "version": "0.0.0",
   "description": "typescript based nodejs concise framework egine",
   "main": "index.ts",
