--- a/packages/mw-jwt/package.json
+++ b/packages/mw-jwt/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "@ncf/engine": "*"
+    "@ncf/microkernel": "*"
   },
   "dependencies": {
     "jsonwebtoken": "^8.5.1"
