--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "@types/elasticsearch": "^5.0.40",
-    "@types/pg": "^8.6.4"
+    "@types/pg": "^8.6.4",
+    "tslib": "^2.3.1"
   },
   "keywords": [],
   "author": "",
