--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -5,6 +5,7 @@
       "moduleResolution": "node",
       "esModuleInterop": true,
       "strictNullChecks": true,
+      "importHelpers": true,
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
