--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -1,24 +1,28 @@
 {
-   "compilerOptions": {
-      "target": "es2018",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "esModuleInterop": true,
-      "strictNullChecks": true,
-      "importHelpers": true,
-      "outDir": "./build",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true,
-      "baseUrl": "./src",
-      "paths": {
-        "src/*": ["*"]
-      }
-   },
-   "ts-node": {
-     "compilerOptions": {
-       "strictNullChecks": false
-     },
-    "require": ["tsconfig-paths/register"]
+  "compilerOptions": {
+    "target": "es2018",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "strictNullChecks": true,
+    "importHelpers": true,
+    "outDir": "./build",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "baseUrl": "./src",
+    "paths": {
+      "src/*": [
+        "*"
+      ]
+    }
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "strictNullChecks": false
+    },
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
