--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -1,10 +1,18 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Node 16",
   "compilerOptions": {
-    "target": "es2018",
+    "lib": [
+      "es2021"
+    ],
+    "target": "es2021",
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
     "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "outDir": "./build",
     "emitDecoratorMetadata": true,
