--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -27,7 +27,7 @@
   },
   "ts-node": {
     "compilerOptions": {
-      "strictNullChecks": false
+      "strictPropertyInitialization": false
     },
     "require": [
       "tsconfig-paths/register"
