--- a/packages/baas-typeorm/package.json
+++ b/packages/baas-typeorm/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.3"
+  }
 }
