首次支持 tsx faas 渲染 html 响应，并可调内部api取数据
inner call 只是初步试验，后面还要完善形成规范，支持类型推导

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -10,11 +10,15 @@
     "@ncf/microkernel": "*",
     "elasticsearch": "^16.7.3",
     "pg": "^8.7.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typeorm": "^0.3.3"
   },
   "devDependencies": {
     "@types/elasticsearch": "^5.0.40",
     "@types/pg": "^8.6.4",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "tslib": "^2.3.1"
   },
   "keywords": [],
