添加 redis baas 类型范例

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@ncf/microkernel": "*",
     "elasticsearch": "^16.7.3",
+    "ioredis": "^5.0.3",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
