--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "nodejs concise framework",
   "workspaces": [
     "packages/microkernel",
+    "packages/gateway-koa",
     "packages/mw-validator",
     "packages/mw-jwt",
     "packages/baas-typeorm",
