--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -13,6 +13,7 @@
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "sharp": "^0.30.3",
     "typeorm": "^0.3.3"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@types/pg": "^8.6.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/sharp": "^0.30.0",
     "tslib": "^2.3.1"
   },
   "keywords": [],
