--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -18,6 +18,7 @@
     "outDir": "./build",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "isolatedModules": true,
     "sourceMap": true,
     "baseUrl": "./src",
     "paths": {
