--- a/packages/microkernel/tsconfig.json
+++ b/packages/microkernel/tsconfig.json
@@ -8,6 +8,7 @@
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
+      "isolatedModules": true,
       "sourceMap": true,
       "baseUrl": "./src",
       "paths": {
