--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sharp": "^0.30.3",
+    "tsconfig-paths": "^3.13.0",
+    "ts-node": "^10.7.0",
     "typeorm": "^0.3.3"
   },
   "devDependencies": {
