ioredis 集成支持统一放入 @ncf/ioredis 中

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "packages/mw-jwt",
     "packages/baas-typeorm",
     "packages/baas-pg",
+    "packages/baas-ioredis",
     "packages/examples",
     "packages/loader-cfg-json5",
     "packages/loader-cfg-yaml",
