全局依赖梳理，核心包仅含核心依赖，范例包含应用层所有依赖
扩展集成包 peerDependencies 包含对应的 pg, typeorm, ioredis 等依赖

--- a/packages/baas-pg/package.json
+++ b/packages/baas-pg/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "nodejs pg 的连接池 baas 供应",
   "main": "index.ts",
+  "peerDependencies": {
+    "pg": "^8.7.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
