--- a/packages/baas-ioredis/package.json
+++ b/packages/baas-ioredis/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "peer-dependencies": {
+    "ioredis": "^5.0.3"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
