--- a/packages/baas-typeorm/package.json
+++ b/packages/baas-typeorm/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "peerDependencies": {
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.3"
   }
