--- a/packages/microkernel/package.json
+++ b/packages/microkernel/package.json
@@ -9,8 +9,6 @@
   "dependencies": {
     "chokidar": "^3.5.3",
     "debug": "^4.3.3",
-    "koa": "^2.13.4",
-    "koa-body": "^4.2.0",
     "minimatch": "^5.0.1",
     "reflect-metadata": "^0.1.10",
     "shimmer": "^1.2.1",
@@ -18,12 +16,12 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
-    "@types/koa": "^2.13.4",
     "@types/minimatch": "^3.0.5",
     "@types/node": "^17.0.21",
     "@types/shimmer": "^1.0.2",
     "node-fetch": "^3.2.2",
     "ts-node": "^10.7.0",
+    "tslib": "^2.3.1",
     "typescript": "4.6.2"
   },
   "keywords": [],
