entity 路径改变 txconfig, baas, faas 响应改变

--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -24,6 +24,9 @@
     "paths": {
       "src/*": [
         "*"
+      ],
+      "entity/*": [
+        "./baas/typeorm/entity/*"
       ]
     }
   },
