--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -14,6 +14,8 @@
     "@ncf/typeorm": "*",
     "elasticsearch": "^16.7.3",
     "ioredis": "^5.0.3",
+    "mobx": "^6.5.0",
+    "mobx-state-tree": "^5.1.3",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
