--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "ts-node index.ts"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@elastic/elasticsearch": "^8.1.0",
-    "@ncf/ioredis": "*",
     "@ncf/microkernel": "*",
+    "@ncf/ioredis": "*",
     "@ncf/pg": "*",
-    "@ncf/typeorm": "*",
+    "@ncf/typeorm": "*"
+  },
+  "dependencies": {
     "elasticsearch": "^16.7.3",
     "ioredis": "^5.0.3",
     "mobx": "^6.5.0",
