--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -8,8 +8,8 @@
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^8.1.0",
-    "@ncf/microkernel": "*",
     "@ncf/ioredis": "*",
+    "@ncf/microkernel": "*",
     "@ncf/pg": "*",
     "@ncf/typeorm": "*"
   },
@@ -18,6 +18,7 @@
     "ioredis": "^5.0.3",
     "mobx": "^6.5.0",
     "mobx-state-tree": "^5.1.3",
+    "node-fetch": "2",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/elasticsearch": "^5.0.40",
+    "@types/node-fetch": "2",
     "@types/pg": "^8.6.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
