--- a/packages/example-oracle/package.json
+++ b/packages/example-oracle/package.json
@@ -1,6 +1,7 @@
 {
   "name": "example-oracle",
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
