--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ncf/examples",
-  "version": "0.2.0",
+  "version": "0.3.0",
+  "private": true,
   "description": "",
   "main": "index.ts",
   "scripts": {
