--- a/packages/expr/package.json
+++ b/packages/expr/package.json
@@ -1,6 +1,7 @@
 {
   "name": "expr",
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "optionalDependencies": {
