--- a/packages/loader-sql-pg/package.json
+++ b/packages/loader-sql-pg/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ncf/loader-sql-pg",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "private": true,
   "description": "",
   "main": "index.ts",
   "scripts": {
