--- a/packages/mw-jwt/package.json
+++ b/packages/mw-jwt/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ncf/mw-jwt",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "private": true,
   "description": "JWT sign and validate middleware",
   "main": "index.ts",
   "scripts": {
