--- a/packages/microkernel/tsconfig.json
+++ b/packages/microkernel/tsconfig.json
@@ -5,7 +5,8 @@
       "moduleResolution": "node",
       "esModuleInterop": true,
       "strictNullChecks": true,
-      "outDir": "./build",
+      "outDir": "./dist",
+      "declaration": true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "isolatedModules": true,
