--- a/packages/microkernel/package.json
+++ b/packages/microkernel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ncf/microkernel",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "typescript based nodejs concise framework micro-kernel",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -13,6 +13,13 @@
     "dist"
   ],
   "dependencies": {
+    "@types/debug": "^4.1.7",
+    "@types/minimatch": "^3.0.5",
+    "@types/node": "^17.0.21",
+    "@types/shimmer": "^1.0.2",
+    "ts-node": "^10.7.0",
+    "tslib": "^2.3.1",
+    "typescript": "4.6.2",
     "chokidar": "^3.5.3",
     "debug": "^4.3.3",
     "minimatch": "^5.0.1",
@@ -21,14 +28,6 @@
     "tsconfig-paths": "^3.13.0"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.7",
-    "@types/minimatch": "^3.0.5",
-    "@types/node": "^17.0.21",
-    "@types/shimmer": "^1.0.2",
-    "node-fetch": "^3.2.2",
-    "ts-node": "^10.7.0",
-    "tslib": "^2.3.1",
-    "typescript": "4.6.2"
   },
   "keywords": [],
   "author": "",
