--- a/packages/gateway-koa/package.json
+++ b/packages/gateway-koa/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@ncf/gateway-koa",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "prepublish": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
