--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.30.3",
-    "typeorm": "^0.3.3"
+    "typeorm": "^0.3.3",
+    "winston": "^3.7.2"
   },
   "devDependencies": {
     "@types/elasticsearch": "^5.0.40",
