example 对环境变量不必设置 ts-node 模式自动启作用加说明

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts"
+    "build": "tsc",
+    "dev": "ts-node index.ts",
+    "start": "ts-node --transpile-only index.ts"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^8.1.0",
