kernel ts 编译 src 到 dist 对应

--- a/packages/microkernel/tsconfig.json
+++ b/packages/microkernel/tsconfig.json
@@ -11,11 +11,15 @@
       "experimentalDecorators": true,
       "isolatedModules": true,
       "sourceMap": true,
+      "rootDir": "src",
       "baseUrl": "./src",
       "paths": {
         "src/*": ["*"]
       }
    },
+   "include": [
+     "src"
+   ],
    "ts-node": {
      "compilerOptions": {
        "strictNullChecks": false
