baas-typeorm 发版 0.1.0

--- a/packages/baas-typeorm/package.json
+++ b/packages/baas-typeorm/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@ncf/typeorm",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "export api to get typeorm connection with transaction context",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "tsc",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
