jwt,validator 模块分离 src，准备发版，版本到 0.1.0

--- a/packages/mw-jwt/package.json
+++ b/packages/mw-jwt/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@ncf/mw-jwt",
-  "version": "0.0.1",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
   "description": "JWT sign and validate middleware",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "tsc",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
