examples 不带 loaders 时可以 tsc 通过

--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -13,9 +13,11 @@
     "strict": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
-    "outDir": "./build",
+    "rootDir": "src",
+    "outDir": "./dist",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "isolatedModules": true,
