--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -17,6 +17,7 @@
     "@ncf/typeorm": "*"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.1.0",
     "elasticsearch": "^16.7.3",
     "ioredis": "^5.0.3",
     "mobx": "^6.5.0",
@@ -28,6 +29,7 @@
     "reflect-metadata": "^0.1.13",
     "sharp": "^0.30.3",
     "typeorm": "^0.3.3",
+    "typescript": "4.6.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
