确保 yarn 总体安装能执行 tsc，并通过 ts check

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   },
   "dependencies": {
   },
-  "scripts": {}
+  "scripts": {
+    "clean": "lerna run clean --stream",
+    "build": "lerna run build --stream",
+    "postinstall": "yarn build"
+  }
 }
