--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-always-auth=true
+;always-auth=true
 registry=http://nexus.ops.enncloud.cn/repository/enn-npm/
-//http://nexus.ops.enncloud.cn/repository/enn-npm/:_authToken=aGNsb3VkLWRldm9wczpzOWU5YndXVkFNS1pyWHE=
+;//http://nexus.ops.enncloud.cn/repository/enn-npm/:_authToken=aGNsb3VkLWRldm9wczpzOWU5YndXVkFNS1pyWHE=
