--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.1.0",
+    "amqplib": "^0.8.0",
     "elasticsearch": "^16.7.3",
     "ioredis": "^5.0.3",
     "mobx": "^6.5.0",
@@ -34,6 +35,7 @@
     "winston": "^3.7.2"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.8.2",
     "@types/elasticsearch": "^5.0.40",
     "@types/node-fetch": "2",
     "@types/pg": "^8.6.4",
