--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "echo tsc",
     "dev": "ts-node src/index.ts",
     "start": "ts-node --transpile-only src/index.ts",
     "start2": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist"
