examples 增加 @ncf/* 依赖

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -18,6 +18,15 @@
     "@ncf/typeorm": "*"
   },
   "dependencies": {
+    "@ncf/microkernel": "*",
+    "@ncf/baas-ioredis": "*",
+    "@ncf/baas-pg": "*",
+    "@ncf/baas-typeorm": "*",
+    "@ncf/mw-validator": "*",
+    "@ncf/loader-cfg-json5": "*",
+    "@ncf/loader-cfg-markdown": "*",
+    "@ncf/loader-cfg-xml": "*",
+    "@ncf/loader-cfg-yaml": "*",
     "@elastic/elasticsearch": "^8.1.0",
     "amqplib": "^0.8.0",
     "elasticsearch": "^16.7.3",
