各个插件依赖 @ncf/microkernel

--- a/packages/baas-ioredis/package.json
+++ b/packages/baas-ioredis/package.json
@@ -9,6 +9,9 @@
   "peer-dependencies": {
     "ioredis": "^5.0.3"
   },
+  "dependencies": {
+    "@ncf/microkernel": "*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
