--- a/packages/mw-jwt/package.json
+++ b/packages/mw-jwt/package.json
@@ -16,10 +16,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "peerDependencies": {
-    "@ncf/microkernel": "*"
-  },
   "dependencies": {
+    "@ncf/microkernel": "*",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
