--- a/packages/gateway-koa/package.json
+++ b/packages/gateway-koa/package.json
@@ -8,7 +8,8 @@
     "dist"
   ],
   "scripts": {
-    "prepublish": "tsc",
+    "build": "tsc",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
