--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -11,7 +11,7 @@
     "start2": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist"
   },
   "peerDependencies": {
-    "@elastic/elasticsearch": "^8.1.0",
+    "@elastic/elasticsearch": "^7.5.1",
     "@ncf/ioredis": "*",
     "@ncf/microkernel": "*",
     "@ncf/pg": "*",
@@ -22,9 +22,11 @@
     "@ncf/loader-cfg-yaml": "*"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.1.0",
+    "@elastic/elasticsearch": "^7.5.1",
     "amqplib": "^0.8.0",
     "elasticsearch": "^16.7.3",
+    "es6": "npm:@elastic/elasticsearch@^6.8",
+    "es7": "npm:@elastic/elasticsearch@~7.5",
     "ioredis": "^5.0.3",
     "mobx": "^6.5.0",
     "mobx-state-tree": "^5.1.3",
