--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -13,17 +13,18 @@
   "peerDependencies": {
     "@elastic/elasticsearch": "^7.5.1",
     "@ncf/ioredis": "*",
-    "@ncf/microkernel": "*",
-    "@ncf/pg": "*",
-    "@ncf/typeorm": "*",
     "@ncf/loader-cfg-json5": "*",
     "@ncf/loader-cfg-markdown": "*",
     "@ncf/loader-cfg-xml": "*",
-    "@ncf/loader-cfg-yaml": "*"
+    "@ncf/loader-cfg-yaml": "*",
+    "@ncf/microkernel": "*",
+    "@ncf/pg": "*",
+    "@ncf/typeorm": "*"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.5.1",
     "amqplib": "^0.8.0",
+    "dotenv": "^16.0.0",
     "elasticsearch": "^16.7.3",
     "es6": "npm:@elastic/elasticsearch@^6.8",
     "es7": "npm:@elastic/elasticsearch@~7.5",
