--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -29,6 +29,8 @@
     "es6": "npm:@elastic/elasticsearch@^6.8",
     "es7": "npm:@elastic/elasticsearch@~7.5",
     "ioredis": "^5.0.3",
+    "leveldown": "^6.1.1",
+    "levelup": "^5.1.1",
     "mobx": "^6.5.0",
     "mobx-state-tree": "^5.1.3",
     "node-fetch": "2",
@@ -36,6 +38,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
+    "rocksdb": "^5.2.1",
     "sharp": "^0.30.3",
     "typeorm": "^0.3.3",
     "typescript": "4.6.2",
@@ -44,10 +47,13 @@
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
     "@types/elasticsearch": "^5.0.40",
+    "@types/leveldown": "^4.0.3",
+    "@types/levelup": "^5.1.1",
     "@types/node-fetch": "2",
     "@types/pg": "^8.6.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/rocksdb": "^3.0.1",
     "@types/sharp": "^0.30.0"
   },
   "keywords": [],
