--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.5.1",
     "amqplib": "^0.8.0",
+    "classic-level": "^1.2.0",
     "dotenv": "^16.0.0",
     "elasticsearch": "^16.7.3",
     "es6": "npm:@elastic/elasticsearch@^6.8",
