--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "echo tsc",
     "dev": "ts-node src/index.ts",
+    "cron": "ts-node --transpile-only src/cron/index.ts",
     "start": "ts-node --transpile-only src/index.ts",
     "start2": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist"
   },
@@ -35,12 +36,14 @@
     "mobx": "^6.5.0",
     "mobx-state-tree": "^5.1.3",
     "node-fetch": "2",
+    "node-schedule": "^2.1.0",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "rocksdb": "^5.2.1",
     "sharp": "^0.30.3",
+    "ts-node": "^10.7.0",
     "typeorm": "^0.3.3",
     "typescript": "4.6.2",
     "winston": "^3.7.2"
@@ -51,6 +54,7 @@
     "@types/leveldown": "^4.0.3",
     "@types/levelup": "^5.1.1",
     "@types/node-fetch": "2",
+    "@types/node-schedule": "^2.1.0",
     "@types/pg": "^8.6.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
