--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "echo tsc",
     "dev": "ts-node src/index.ts",
+    "unit": "ts-node --transpile-only",
     "cron": "ts-node --transpile-only src/cron/index.ts",
     "start": "ts-node --transpile-only src/index.ts",
     "start2": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist"
@@ -30,6 +31,10 @@
     "elasticsearch": "^16.7.3",
     "es6": "npm:@elastic/elasticsearch@^6.8",
     "es7": "npm:@elastic/elasticsearch@~7.5",
+    "ink": "^3.2.0",
+    "ink-markdown": "^1.0.1",
+    "ink-table": "^3.0.0",
+    "ink-text-input": "^4.0.3",
     "ioredis": "^5.0.3",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
