example script core 支持不开 gateway 本地调测

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -6,6 +6,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "echo tsc",
+    "core": "ts-node src/core.ts",
     "dev": "ts-node src/index.ts",
     "unit": "ts-node --transpile-only",
     "cron": "ts-node --transpile-only src/cron/index.ts",
