examples tsc 不包含试验用的代码，因里面不保证通过 ts 检查

--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -32,6 +32,9 @@
       ]
     }
   },
+  "exclude": [
+    "src/faas/lang/**"
+  ],
   "ts-node": {
     "compilerOptions": {
       "strictPropertyInitialization": false
