各package 补上 typescript 依赖，配置好 tsconfig.json

--- a/packages/baas-ioredis/package.json
+++ b/packages/baas-ioredis/package.json
@@ -10,7 +10,8 @@
     "ioredis": "^5.0.3"
   },
   "dependencies": {
-    "@ncf/microkernel": "*"
+    "@ncf/microkernel": "*",
+    "typescript": "^4.6.4"
   },
   "keywords": [],
   "author": "",
