--- a/packages/baas-pg/tsconfig.json
+++ b/packages/baas-pg/tsconfig.json
@@ -4,6 +4,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "esModuleInterop": true,
+      "skipLibCheck": true,
       "strictNullChecks": true,
       "outDir": "./dist",
       "declaration": true,
