--- a/packages/baas-typeorm/tsconfig.json
+++ b/packages/baas-typeorm/tsconfig.json
@@ -1,9 +1,10 @@
 {
    "compilerOptions": {
-      "target": "es2018",
+      "target": "es2021",
       "module": "commonjs",
       "moduleResolution": "node",
       "esModuleInterop": true,
+      "skipLibCheck": true,
       "strictNullChecks": true,
       "outDir": "./dist",
       "declaration": true,
