--- a/packages/ext-later-rocksdb/tsconfig.json
+++ b/packages/ext-later-rocksdb/tsconfig.json
@@ -32,6 +32,9 @@
       ]
     }
   },
+  "exclude": [
+    "test/*"
+  ],
   "ts-node": {
     "compilerOptions": {
       "strictPropertyInitialization": false
