--- a/packages/gateway-koa/package.json
+++ b/packages/gateway-koa/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "koa": "^2.13.4",
-    "koa-body": "^4.2.0"
+    "koa-body": "^4.2.0",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/koa": "^2.13.4"
