--- a/packages/mw-validator/package.json
+++ b/packages/mw-validator/package.json
@@ -2,8 +2,9 @@
   "name": "@ncf/mw-validator",
   "version": "0.2.0",
   "description": "request/response validator for NCF by ajv or manually",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "typings_": "dist/index.d.ts",
+  "typings": "src/index.ts",
   "files": [
     "dist"
   ],
@@ -17,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@ncf/microkernel": "*",
-    "ajv": "^8.10.0"
+    "ajv": "^8.10.0",
+    "typescript": "^4.6.4"
   }
 }
