tsconfig exclude dist 否则再次 tsc 报错会覆盖 .d.ts

--- a/packages/baas-pg/tsconfig.json
+++ b/packages/baas-pg/tsconfig.json
@@ -18,6 +18,10 @@
    "include": [
      "src"
    ],
+   "exclude": [
+    "dist/*",
+    "test/*"
+  ],
    "ts-node": {
      "compilerOptions": {
        "strictNullChecks": false
