--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   "scripts": {
     "clean": "lerna run clean --stream",
     "build": "lerna run build --stream",
-    "postinstall": "yarn build"
+    "postinstall-": "yarn build"
   }
 }
