--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -55,7 +55,7 @@
     "sharp": "^0.30.3",
     "ts-node": "^10.7.0",
     "typeorm": "^0.3.3",
-    "typescript": "4.6.2",
+    "typescript": "^4.6.2",
     "winston": "^3.7.2"
   },
   "devDependencies": {
