--- a/packages/baas-ioredis/package.json
+++ b/packages/baas-ioredis/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@ncf/ioredis",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "nodejs redis 连接 baas 供应",
-  "main": "index.ts",
+  "main": "./dist/index.js",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peer-dependencies": {
