补上 files, prepublish

--- a/packages/baas-ioredis/package.json
+++ b/packages/baas-ioredis/package.json
@@ -6,8 +6,12 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
+    "prepublishOnly": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peer-dependencies": {
