--- a/packages/loader-cfg-xml/package.json
+++ b/packages/loader-cfg-xml/package.json
@@ -2,7 +2,10 @@
   "name": "@ncf/loader-cfg-xml",
   "version": "0.0.1",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
+  "files": [
+    "."
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
