所有可发布的包 publishConfig access:public
"publishConfig": {
  "access": "public",
  "registry": "https://registry.npmjs.org/"
},

--- a/packages/microkernel/package.json
+++ b/packages/microkernel/package.json
@@ -12,6 +12,10 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
     "@types/debug": "^4.1.7",
     "@types/minimatch": "^3.0.5",
