--- a/packages/baas-pg/package.json
+++ b/packages/baas-pg/package.json
@@ -6,6 +6,10 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "peerDependencies": {
     "pg": "^8.7.3"
   },
