--- a/packages/loader-cfg-json5/package.json
+++ b/packages/loader-cfg-json5/package.json
@@ -6,6 +6,10 @@
   "files": [
     "."
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
