--- a/packages/loader-cfg-markdown/package.json
+++ b/packages/loader-cfg-markdown/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.ts",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
