--- a/packages/mw-validator/package.json
+++ b/packages/mw-validator/package.json
@@ -8,6 +8,10 @@
   "files": [
     "dist"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "tsc",
     "prepublish": "npm run build",
