--- a/packages/microkernel/package.json
+++ b/packages/microkernel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ncf/microkernel",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "typescript based nodejs concise framework micro-kernel",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -21,19 +21,18 @@
     "@types/minimatch": "^3.0.5",
     "@types/node": "^17.0.21",
     "@types/shimmer": "^1.0.2",
-    "ts-node": "^10.7.0",
-    "tslib": "^2.3.1",
-    "typescript": "4.6.2",
     "chokidar": "^3.5.3",
     "debug": "^4.3.3",
     "minimatch": "^5.0.1",
     "reflect-metadata": "^0.1.10",
     "shimmer": "^1.2.1",
-    "tsconfig-paths": "^3.13.0"
-  },
-  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.13.0",
+    "tslib": "^2.3.1",
+    "typescript": "4.6.2"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "5b8e3422f51e1bd5b5b37412a3bd0d2869caabfa"
 }
