--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -3,7 +3,8 @@
   "display": "Node 16",
   "compilerOptions": {
     "lib": [
-      "es2021"
+      "ESNext",
+      "DOM"
     ],
     "target": "es2021",
     "module": "commonjs",
