"node": ">=18.2.0"  内置支持 fetch API

--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -80,6 +80,9 @@
     "@types/tap": "^15.0.7",
     "tap": "^16.2.0"
   },
+  "engines": {
+    "node": ">=18.2.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
