--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -11,14 +11,10 @@
     "unit": "ts-node --transpile-only",
     "test": "tap --ts --before dotenv/config",
     "cron": "ts-node --transpile-only src/cron/index.ts",
-    "start": "ts-node --transpile-only src/index.ts",
-    "start3": "node src/server.js",
-    "start2": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist",
-    "t1": "node -r ts-node/register -r tsconfig-paths/register src/index.ts",
-    "t2": "node src/server.js",
+    "start": "node src/server.js",
+    "startJs": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist",
     "pm2start": "pm2 start --no-daemon ecosystem.config.js",
-    "pm2sh": "./node_modules/.bin/ts-node -r tsconfig-paths/register --transpile-only ./src/index.ts",
-    "pm2b": "pm2 start -n demo ts-node -- -r tsconfig-paths/register --transpile-only ./src/index.ts"
+    "pm2": "pm2 start ecosystem.config.js"
   },
   "peerDependencies": {
     "@elastic/elasticsearch": "^7.5.1",
