--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -49,6 +49,7 @@
     "levelup": "^5.1.1",
     "mobx": "^6.5.0",
     "mobx-state-tree": "^5.1.3",
+    "mysql2": "^2.3.3",
     "node-schedule": "^2.1.0",
     "pg": "^8.7.3",
     "react": "^17.0.2",
