增加 mongodb 依赖， docker配置，baas/faas 范例

--- a/packages/examples/docker-compose.yml
+++ b/packages/examples/docker-compose.yml
@@ -28,6 +28,17 @@ services:
       - 33060:33060
     volumes:
       - mysqlData:/var/lib/mysql
+
+  mongo:
+    image: mongo:latest
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=docker
+      - MONGO_INITDB_ROOT_PASSWORD=mongopw
+    ports:
+      - 27017:27017
+    volumes:
+      - mongoData:/data/db
 volumes:
   data:
   mysqlData:
+  mongoData:
