--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -50,6 +50,7 @@
     "levelup": "^5.1.1",
     "mobx": "^6.5.0",
     "mobx-state-tree": "^5.1.3",
+    "mongodb": "^4.6.0",
     "mysql2": "^2.3.3",
     "node-schedule": "^2.1.0",
     "pg": "^8.7.3",
