--- a/packages/examples/docker-compose.yml
+++ b/packages/examples/docker-compose.yml
@@ -38,7 +38,15 @@ services:
     volumes:
       - mongoData:/data/db
 
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
+    volumes:
+      - redisData:/data
+
 volumes:
   postgresData:
   mysqlData:
   mongoData:
+  redisData:
