--- a/packages/examples/docker-compose.yml
+++ b/packages/examples/docker-compose.yml
@@ -45,8 +45,27 @@ services:
     volumes:
       - redisData:/data
 
+  # 4369/tcp, 5671/tcp, 0.0.0.0:5672->5672/tcp, 15671/tcp, 15691-15692/tcp, 25672/tcp, 0.0.0.0:15672->15672/tcp
+  rabbitmq:
+    image: rabbitmq:management
+    environment:
+      - RABBITMQ_DEFAULT_USER=admin
+      - RABBITMQ_DEFAULT_PASS=admin
+    ports:
+      - 4369:4369
+      - 5671:5671
+      - 5672:5672
+      - 15671:15671
+      - 15672:15672
+      - 15691:15691
+      - 15692:15692
+      - 25672:25672
+    volumes:
+      - rabbitmqData:/var/lib/rabbitmq
+
 volumes:
   postgresData:
   mysqlData:
   mongoData:
   redisData:
+  rabbitmqData:
