--- a/packages/examples/docker-compose.yml
+++ b/packages/examples/docker-compose.yml
@@ -1,5 +1,5 @@
 # reference: https://blitzjs.com/docs/postgres
-# docker-compose up -d
+# docker-compose up -d service-name
 
 version: "3.7"
 
@@ -38,6 +38,16 @@ services:
     volumes:
       - mongoData:/data/db
 
+  # docker run -d --name elasticsearch --net somenetwork -p 9200:9200 -p 9300:9300 -e "discovery.type=single-node" elasticsearch:tag
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.2.2
+    environment:
+      - discovery.type=single-node
+    ports:
+      - 9200:9200
+      - 9300:9300
+    volumes:
+      - elasticsearchData:/usr/share/elasticsearch/data
   redis:
     image: redis:alpine
     ports:
@@ -67,5 +77,6 @@ volumes:
   postgresData:
   mysqlData:
   mongoData:
+  elasticsearchData:
   redisData:
   rabbitmqData:
