--- a/packages/examples/docker-compose.yml
+++ b/packages/examples/docker-compose.yml
@@ -48,6 +48,13 @@ services:
       - 9300:9300
     volumes:
       - elasticsearchData:/usr/share/elasticsearch/data
+
+  # docker run -d --name kibana --net somenetwork -p 5601:5601 kibana:tag
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.2.2
+    ports:
+      - 5601:5601
+
   redis:
     image: redis:alpine
     ports:
