--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -58,6 +58,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
+    "rethinkdb": "^2.4.2",
     "rocksdb": "^5.2.1",
     "sharp": "^0.30.3",
     "ts-node": "^10.7.0",
@@ -75,6 +76,7 @@
     "@types/pg": "^8.6.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "@types/rethinkdb": "^2.3.17",
     "@types/rocksdb": "^3.0.1",
     "@types/sharp": "^0.30.0",
     "@types/tap": "^15.0.7",
