--- a/packages/examples/docker-compose.yml
+++ b/packages/examples/docker-compose.yml
@@ -91,6 +91,34 @@ services:
     volumes:
       - rabbitmqData:/var/lib/rabbitmq
 
+  # https://hub.docker.com/r/bitnami/kafka
+  zookeeper:
+    image: docker.io/bitnami/zookeeper:3.8
+    ports:
+      - 2181:2181
+    volumes:
+      - zookeeper_data:/bitnami
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: docker.io/bitnami/kafka:3.2
+    ports:
+      - 9092:9092
+      - 9093:9093
+    volumes:
+      - kafka_data:/bitnami
+    environment:
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_HEAP_OPTS=-Xmx512m -Xms512m
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9092,EXTERNAL://localhost:9093
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
+    depends_on:
+      - zookeeper
+
 volumes:
   postgresData:
   mysqlData:
@@ -99,3 +127,7 @@ volumes:
   redisData:
   rethinkData:
   rabbitmqData:
+  zookeeper_data:
+    driver: local
+  kafka_data:
+    driver: local
