--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -54,6 +54,7 @@
     "mobx-state-tree": "^5.1.3",
     "mongodb": "^4.6.0",
     "mysql2": "^2.3.3",
+    "nats": "^2.7.1",
     "node-schedule": "^2.1.0",
     "pg": "^8.7.3",
     "react": "^17.0.2",
