--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -49,6 +49,7 @@
     "ink-text-input": "^4.0.3",
     "ioredis": "^5.0.3",
     "kafkajs": "^2.0.2",
+    "koa-send": "^5.0.1",
     "leveldown": "^6.1.1",
     "levelup": "^5.1.1",
     "mobx": "^6.5.0",
@@ -73,6 +74,7 @@
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
     "@types/elasticsearch": "^5.0.40",
+    "@types/koa-send": "^4.1.3",
     "@types/leveldown": "^4.0.3",
     "@types/levelup": "^5.1.1",
     "@types/node-fetch": "2",
