--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -69,7 +69,8 @@
     "ts-node": "^10.7.0",
     "typeorm": "^0.3.3",
     "typescript": "^4.6.2",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "x-ray": "^2.3.4"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
@@ -86,6 +87,7 @@
     "@types/rocksdb": "^3.0.1",
     "@types/sharp": "^0.30.0",
     "@types/tap": "^15.0.7",
+    "@types/x-ray": "^2.3.3",
     "tap": "^16.2.0"
   },
   "engines": {
