--- a/packages/baas-typeorm/package.json
+++ b/packages/baas-typeorm/package.json
@@ -20,10 +20,10 @@
   "license": "ISC",
   "dependencies": {
     "@ncf/microkernel": "*",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "typeorm": "^0.3.3"
   },
   "peerDependencies": {
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.3"
+    "reflect-metadata": "^0.1.13"
   }
 }
