--- a/packages/mw-jwt/package.json
+++ b/packages/mw-jwt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ncf/mw-jwt",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": false,
   "description": "JWT sign and validate middleware",
   "main": "dist/index.js",
@@ -21,9 +21,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ncf/microkernel": "*",
     "jsonwebtoken": "^8.5.1",
     "typescript": "^4.6.4"
+  },
+  "peerDependencies": {
+    "@ncf/microkernel": "*"
   },
   "devDependencies": {
     "@ncf/microkernel": "*",
